--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "flowbite-react": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
