--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.11",
     "firebase": "^9.22.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
